--- a/legends.html
+++ b/legends.html
@@ -5,10 +5,14 @@
     <title>Apex Legend</title>
     <link rel="icon" type="image/png" href="images/logo.png" />
     <link rel="stylesheet" href="style.css">
-
+    <script src="app.js" defer></script>
 
   </head>
   <body>
+
+    <div class="btn">
+		   <img src="images\arrow-up-solid.svg" class="icone">
+		</div>
 
       <table>
         <tr>
@@ -49,11 +53,11 @@
             <td><p> WRAITH:</p></td>
           </tr>
           <tr>
-            <td><a href="legends.html"><img src="images/perso/bloodhund.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/gibraltar.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/lifeline.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/pathfinder.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/wraith.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/bloodhound.html"><img src="images/perso/bloodhund.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/gibraltar.html"><img src="images/perso/gibraltar.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/lifeline.html"><img src="images/perso/lifeline.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/pathfinder.html"><img src="images/perso/pathfinder.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/wraith.html"><img src="images/perso/wraith.jpg" width="300" height="180" alt="legends"></a></td>
           </tr>
           <tr>
             <td><p> BANGALORE:</p></td>
@@ -63,11 +67,11 @@
             <td><p> WATTSON:</p></td>
           </tr>
           <tr>
-            <td><a href="legends.html"><img src="images/perso/bangalore.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/caustic.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/mirage.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/octane.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/wattson.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/bangalore.html"><img src="images/perso/bangalore.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/caustic.html"><img src="images/perso/caustic.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/mirage.html"><img src="images/perso/mirage.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/octane.html"><img src="images/perso/octane.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/wattson.html"><img src="images/perso/wattson.jpg" width="300" height="180" alt="legends"></a></td>
           </tr>
           <tr>
             <td><p> CRYPTO:</p></td>
@@ -77,11 +81,11 @@
             <td><p> HORIZON:</p></td>
           </tr>
           <tr>
-            <td><a href="legends.html"><img src="images/perso/crypto.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/revenant.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/loba.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/rampart.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/horizon.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/crypto.html"><img src="images/perso/crypto.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/revenant.html"><img src="images/perso/revenant.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/loba.html"><img src="images/perso/loba.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/rampart.html"><img src="images/perso/rampart.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/horizon.html"><img src="images/perso/horizon.jpg" width="300" height="180" alt="legends"></a></td>
           </tr>
           <tr>
             <td><p> FUSE:</p></td>
@@ -91,11 +95,11 @@
             <td><p> MAD MAGGIE:</p></td>
           </tr>
           <tr>
-            <td><a href="legends.html"><img src="images/perso/fuse.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/valkyrie.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/seer.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/ash.jpg" width="300" height="180" alt="legends"></a></td>
-            <td><a href="legends.html"><img src="images/perso/madmaggie.jpeg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/fuse.html"><img src="images/perso/fuse.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/valkyrie.html"><img src="images/perso/valkyrie.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/seer.html"><img src="images/perso/seer.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/ash.html"><img src="images/perso/ash.jpg" width="300" height="180" alt="legends"></a></td>
+            <td><a href="legends/madmaggie.html"><img src="images/perso/madmaggie.jpeg" width="300" height="180" alt="legends"></a></td>
           </tr>
 				</table>
 				</br>
