--- a/legends/loba.html
+++ b/legends/loba.html
@@ -42,11 +42,11 @@
 
 
 <div id="milieu">
-<h1>Octane:</h1>
-<img src="../images/perso/octane.jpg" width="80%" alt="legends">
+<h1>Loba:</h1>
+<img src="../images/perso/loba.jpg" width="80%" alt="legends">
 <br>
 <h2>Compétences:</h2>
-<img src="../images/perso/Coctane.png" width="80%" alt="legends">
+<img src="../images/perso/Cloba.png" width="80%" alt="legends">
       <br><br><br><br>
 
       <hr>
