--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <title>Apex Legend.com</title>
     <link rel="icon" type="image/png" href="images/logo.png" />
     <link rel="stylesheet" href="style.css">
-
+    <script src="app.js" defer></script>
 
   </head>
   <body>
+
+    <div class="btn">
+		   <img src="images\arrow-up-solid.svg" class="icone">
+		</div>
+
 <div id="milieu">
   <br>
   <center>
