--- a/legends/horizon.html
+++ b/legends/horizon.html
@@ -43,10 +43,10 @@
 
 <div id="milieu">
 <h1>Octane:</h1>
-<img src="../images/perso/octane.jpg" width="80%" alt="legends">
+<img src="../images/perso/horizon.jpg" width="80%" alt="legends">
 <br>
 <h2>Compétences:</h2>
-<img src="../images/perso/Coctane.png" width="80%" alt="legends">
+<img src="../images/perso/Chorizon.png" width="80%" alt="legends">
       <br><br><br><br>
 
       <hr>
