--- a/maps/olympus.html
+++ b/maps/olympus.html
@@ -5,10 +5,14 @@
     <title>Apex Legend</title>
     <link rel="icon" type="image/png" href="../images/logo.png" />
     <link rel="stylesheet" href="../style.css">
-
+    <script src="../app.js" defer></script>
 
   </head>
   <body>
+
+    <div class="btn">
+       <img src="../images\arrow-up-solid.svg" class="icone">
+    </div>
 
     <table>
       <tr>
